[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[sub_resource type="CubeMesh" id=4]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 2.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.92549, 0.454902, 0, 1 )

[sub_resource type="CapsuleShape" id=3]
height = 2.0

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CamRoot" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CamRoot"]
transform = Transform( 1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0.00555539, 1.67001, -1.26594 )

[node name="AimCast" type="RayCast" parent="CamRoot/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="ColorRect" type="ColorRect" parent="CamRoot/Camera"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -5.0
margin_right = 5.0
margin_bottom = 5.0
color = Color( 0.0235294, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gun" type="MeshInstance" parent="CamRoot"]
transform = Transform( 0.0972797, 0, 0, 0, 0.164889, -0.0105416, 0, 0.00173829, 0.999944, 0.909755, 0.77496, -1.80232 )
mesh = SubResource( 4 )
material/0 = null

[node name="Muzzle" type="Spatial" parent="CamRoot/Gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0693822, -1.08522 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="BodyShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="GroundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )
